spacing fixes

--- a/styles/eventsdetails.scss
+++ b/styles/eventsdetails.scss
@@ -61,8 +61,9 @@
 .details_sponsors {
   display: flex;
   flex-direction: row;
+  
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   color: white;
   margin-top: 3%;
   width: 70%;
